--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,14 +7,18 @@
         padding: 0;
         box-sizing:border-box;
     }
-
+    /*  background */
     #lezioni .row, #why .row  {
         background-color: #F2F2CD;
     }
 
-    /* lezioni */
+    /* width */
 
     #lezioni .row>.left, #lezioni .row>.right {
+        width: 100%;    
+    }
+
+    #steps .row>.left, #steps .row>.central, #steps .row>.right {
         width: 100%;
     }
 
