--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,7 @@
         padding: 0;
         box-sizing:border-box;
     }
+
     /*  background */
     #lezioni .row, #why .row  {
         background-color: #F2F2CD;
@@ -21,5 +22,13 @@
     #steps .row>.left, #steps .row>.central, #steps .row>.right {
         width: 100%;
     }
+
+    /* margin */
+
+    .row {
+        margin-top: 0;
+    }
+
+
 
 }
