added padding for class .row

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,12 +23,11 @@
         width: 100%;
     }
 
-    /* margin */
+    /* margin/padding */
 
     .row {
         margin-top: 0;
+        padding: 25px;
     }
-
-
 
 }
