--- a/css/responsive.css
+++ b/css/responsive.css
@@ -39,5 +39,17 @@
         padding: 30px;
     }
 
+    /* text */
+
+    h1 {
+        font-size: 3em;
+    }
+
+    h3 {
+        font-size: 2em;
+        margin: 10px 0;
+    }
+
+    
 
 }
