--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,16 +33,16 @@
     .row {
         max-width: 100%;
         margin-top: 0;
-        padding: 30px;
+        padding: 30px 0;
     }
 
     .left , .central, .right {
-        padding: 30px;
+        padding: 30px 5px;
     }
 
     #why .row>.first, #why .row>.second, #why .row>.third {
         margin-top: 0px;
-        padding: 30px;
+        padding: 30px 5px;
     }
 
     hr {
@@ -50,7 +50,7 @@
     }
 
     h3 {
-        margin: 10px 0;
+        margin: 10px;
     }
 
 
